--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <title>CASANOVA</title>
 </head>
 <body>
-    <P style="font-size: 50 px; color: rgb(0, 255, 234);">CLASE HTML</P>
-    <H1 style="font-size: 25 px; color: blueviolet;">Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Quibusdam facilis tempore <br> necessitatibus! Hic optio eum aut alias quasi ipsa mollitia odit est nam <br> ducimus, a nesciunt quaerat aspernatur ullam consequuntur.</H1>
+    <p style="font-size: 50px; color: aqua;">CLASE HTML</p>
+    <H1 style="font-size: 25px; color: blueviolet;">Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Quibusdam facilis tempore <br> necessitatibus! Hic optio eum aut alias quasi ipsa mollitia odit est nam <br> ducimus, a nesciunt quaerat aspernatur ullam consequuntur.</H1>
     <h2>titulo2</h2>
-    <h3>titulo3</h3>
+    <ol>
+        <li style="color: pink;">vida</li>
+        <li style="color: gold;">futbol</li>
+        <li style="color: plum;">musica</li>
+        <li style="color: red;">peliculas</li>
+    </ol>
+    <h3 style="font-size: 20 px; color: green;">titulo3</h3>
     <h4>titulo4</h4>
     <h5>titulo5</h5>
     <h6>titulo6</h6>
-    <a href="http://yotube" target="_blank" rel="noopener noreferrer">ir al sitio oficial</a>
+    <a href="" target="_blank" rel="noopener noreferrer">ir al sitio oficial</a>
 </body>
 </html>
