--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </ol>
     <h3 style="font-size: 20 px; color: green;">titulo3</h3>
     <h4>titulo4</h4>
+    <p>Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Aut beatae expedita vitae officia <br> dolorum quo saepe. Deserunt tempore explicabo velit, <br> facere ab reiciendis, nobis enim, ipsam expedita cupiditate sunt voluptate.</p>
     <h5>titulo5</h5>
+    <p>Lorem ipsum dolor sit amet consectetur, <br> adipisicing elit. Vero accusamus excepturi quidem, fuga <br> inventore ducimus iusto facere mollitia possimus explicabo <br> voluptatibus aut velit ullam ipsum eaque natus beatae. Explicabo, deleniti?</p>
     <h6>titulo6</h6>
     <a href="" target="_blank" rel="noopener noreferrer">ir al sitio oficial</a>
 </body>
